--- a/client/dev/partials/admin/menu.html
+++ b/client/dev/partials/admin/menu.html
@@ -7,10 +7,18 @@
 					<span translate="shared.users"></span>
 				</a>
 			</li>
+
 			<li ui-sref-active="active">
 				<a ui-sref="main.admin.theme_list">
 					<i class="fa fa-medkit fa-fw"></i>
-					<span translate="indicator.themes"></span>
+					<span translate="theme.themes"></span>
+				</a>
+			</li>
+
+			<li ui-sref-active="active">
+				<a ui-sref="main.admin.indicator_list">
+					<i class="fa fa-book fa-fw"></i>
+					<span translate="indicator.cross_cutting"></span>
 				</a>
 			</li>
 		</ul>
