--- a/client/dev/partials/projects/structure/cross-cutting.html
+++ b/client/dev/partials/projects/structure/cross-cutting.html
@@ -4,9 +4,7 @@
 	<li class="active" translate="indicator.cross_cutting"></li>
 </ol>
 
-<div class="alert alert-info">
-	Les indicateurs transversaux ...
-</div>
+<div class="alert alert-info" translate="project.cross_cutting_list_info"></div>
 
 <legend translate="indicator.cross_cutting"></legend>
 
