--- a/client/dev/css/app.css
+++ b/client/dev/css/app.css
@@ -490,3 +490,77 @@ ul[ng-sortable] li *, i.fa.fa-bars {
   padding: 4px;
   margin: 3px;
 }
+
+
+
+.indicator-panel {
+  display: inline-block;
+  vertical-align: top
+}
+
+
+@media (max-width: 800px) {
+  .indicator-panel {
+    display: block;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 1000px) {
+  .indicator-panel {
+    width: 32%;
+    margin-left: 1.5%;
+  }
+
+  .indicator-panel:nth-child(3n+1) {
+    margin: 0;
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1200px) {
+  .indicator-panel {
+    width: 24%;
+    margin-left: 1.33%;
+  }
+
+  .indicator-panel:nth-child(4n+1) {
+    margin: 0;
+  }
+}
+
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+  .indicator-panel {
+    width: 19%;
+    margin-left: 1.25%;
+  }
+
+  .indicator-panel:nth-child(5n+1) {
+    margin: 0;
+  }
+}
+
+@media (min-width: 1400px) {
+  .indicator-panel {
+    width: 16%;
+    margin-left: 0.66%;
+  }
+
+  .indicator-panel:nth-child(6n+1) {
+    margin: 0;
+  }
+}
+
+
+
+.indicator-panel .panel-body {
+  padding: 10px 10px 30px 10px;
+  position: relative;
+}
+
+.indicator-panel .panel-body a {
+  margin-top: 5px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
