--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -1,10 +1,10 @@
 
-<a class="btn btn-primary pull-right" ng-click="createProject()" acl-has-role="project">
+<a class="btn btn-primary pull-right" ng-click="createProject()" acl-has-project-creation>
 	<i class="fa fa-plus"></i>
 	<span translate="project.create"></span>
 </a>
 
-<div class="pull-right" tooltip="{{'project.cant_create'|translate}}" tooltip-placement="left" acl-lacks-role="project" style="cursor: not-allowed">
+<div class="pull-right" tooltip="{{'project.cant_create'|translate}}" tooltip-placement="left" acl-lacks-project-creation style="cursor: not-allowed">
 	<a class="btn btn-primary disabled">
 		<i class="fa fa-plus"></i>
 		<span translate="project.create"></span>
@@ -28,10 +28,9 @@
 <table class="table table-bordered table-stripped table-condensed">
 	<thead>
 		<tr>
-			<th style="width: 55px"></th>
 			<th><a ng-click="pred='country';rev=!rev">{{'shared.country'|translate}}</a></th>
 			<th><a ng-click="pred='name';rev=!rev">{{'shared.name'|translate}}</a></th>
-			<th><a ng-click="pred='themes';rev=!rev">{{'indicator.themes'|translate}}</a></th>
+			<th><a ng-click="pred='themes';rev=!rev">{{'theme.themes'|translate}}</a></th>
 			<th style="width: 100px;"><a ng-click="pred='start';rev=!rev">{{'shared.start'|translate}}</a></th>
 			<th style="width: 100px;"><a ng-click="pred='end';rev=!rev">{{'shared.end'|translate}}</a></th>
 		</tr>
@@ -41,23 +40,6 @@
 			<td colspan="6" style="text-align: center" translate="project.noproject">
 		</tr>
 		<tr ng-repeat="project in projects|orderBy:pred:rev">
-			<td style="text-align: center">
-				<i class="fa fa-object-group fa-fw"
-				   tooltip="{{'project.you_are_owner'|translate}}"
-				   tooltip-placement="right" acl-has-project-role="owner" acl-project="project" style="color: green"></i>
-
-				<i class="fa fa-object-group fa-fw"
-				   tooltip="{{'project.you_are_not_owner'|translate}}"
-				   tooltip-placement="right" acl-lacks-project-role="owner" acl-project="project" style="color: darkred"></i>
-
-				<i class="fa fa-pencil fa-fw"
-				   tooltip="{{'project.you_are_editor'|translate}}"
-				   tooltip-placement="right" acl-has-project-role="input" acl-project="project" style="color: green"></i>
-
-				<i class="fa fa-pencil fa-fw"
-				   tooltip="{{'project.you_are_not_editor'|translate}}"
-				   tooltip-placement="right" acl-lacks-project-role="input" acl-project="project" style="color: darkred"></i>
-			</td>
 			<td>{{project.country}}</td>
 			<td><a ui-sref="main.project.structure.basics({projectId: project._id})">{{project.name}}</a></td>
 			<td>{{project.themes|getObjects:themes|pluck:'name'|pluck:language|join:', '}}</td>
