--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -2,98 +2,6 @@
 <div class="row">
 	<div class="col-md-2 noprint">
 		<div class="panel-group">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="panel-title" translate="project.structure"></h4>
-				</div>
-
-				<div class="panel-collapse">
-					<div class="list-group">
-						<a ui-sref="main.project.structure.basics"
-						   ui-sref-active="active"
-						   class="list-group-item">
-
-							<i class="fa fa-info-circle fa-fw"></i>
-							<span translate="project.basics"></span>
-						</a>
-
-						<a ui-sref="main.project.structure.collection_site_list"
-						   ui-sref-active="active"
-						   class="list-group-item"
-						   eat-click-if="!project._rev"
-						   disable-if="!project._rev">
-
-							<span class="label label-default pull-right">{{project.entities.length}}</span>
-							<i class="fa fa-map-marker fa-fw"></i>
-							<span translate="project.collection_site_list"></span>
-						</a>
-
-						<a ui-sref="main.project.structure.collection_form_list"
-						   class="list-group-item"
-						   ng-class="{active: $state.is('main.project.structure.collection_form_list') || $state.is('main.project.structure.collection_form_edition')}"
-						   eat-click-if="!project._rev"
-						   disable-if="!project._rev">
-							
-							<span class="label label-default pull-right">{{project.forms.length}}</span>
-							<i class="fa fa-table fa-fw"></i>
-							<span translate="project.collection_form_list"></span>
-						</a>
-
-						<a ui-sref="main.project.structure.logical_frame_list"
-						   ng-class="{active: $state.is('main.project.structure.logical_frame_list') || $state.is('main.project.structure.logical_frame_edition')}"
-						   class="list-group-item"
-						   eat-click-if="!project._rev" disable-if="!project._rev">
-
-							<span class="label label-default pull-right">{{project.logicalFrames.length}}</span>
-							<i class="fa fa-object-group fa-fw"></i>
-							<span translate="shared.logical_frames"></span>
-						</a>
-
-						<a ui-sref="main.project.structure.cross_cutting"
-						   ui-sref-active="active"
-						   class="list-group-item"
-						   eat-click-if="!project._rev" disable-if="!project._rev">
-
-							<span class="label label-default pull-right">{{project.crossCutting|length}}</span>
-							<i class="fa fa-share-alt fa-fw"></i>
-							<span translate="indicator.cross_cutting"></span>
-						</a>
-
-						<a ui-sref="main.project.structure.user_list"
-						   ui-sref-active="active"
-						   class="list-group-item"
-						   eat-click-if="!project._rev" disable-if="!project._rev">
-
-						   <span class="label label-default pull-right">{{project.users.length}}</span>
-							<i class="fa fa-user fa-fw"></i>
-							<span translate="project.users"></span>
-						</a>
-					</div>
-				</div>
-			</div>
-
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="panel-title" translate="project.input"></h4>
-				</div>
-
-				<div class="panel-collapse">
-					<div class="list-group">
-
-						<a ui-sref="main.project.input.list({formId: form.id})"
-						   ui-sref-active="active"
-						   class="list-group-item"
-						   ng-repeat="form in project.forms"
-						   eat-click-if="!project._rev || !projectActivityReady"
-						   disable-if="!project._rev || !projectActivityReady">
-							<i class="fa fa-pencil fa-fw"></i>
-							<span>{{form.name}}</span>
-						</a>
-
-
-					</div>
-				</div>
-			</div>
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
@@ -134,15 +42,117 @@
 				</div>
 			</div>
 
+			<div class="panel panel-default" acl-has-project-role="input">
+				<div class="panel-heading">
+					<h4 class="panel-title" translate="project.input"></h4>
+				</div>
+
+				<div class="panel-collapse">
+					<div class="list-group">
+
+						<a ui-sref="main.project.input.list({formId: form.id})"
+						   ui-sref-active="active"
+						   class="list-group-item"
+						   ng-repeat="form in master.forms"
+						   eat-click-if="!project._rev || !projectActivityReady"
+						   disable-if="!project._rev || !projectActivityReady">
+							<i class="fa fa-pencil fa-fw"></i>
+							<span>{{form.name}}</span>
+						</a>
+						
+
+						<a class="list-group-item" ng-if="!master.forms.length" disable-if="1">
+							<i class="fa fa-pencil fa-fw"></i>
+							<span translate="project.no_data_source"></span>
+						</a>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-default" acl-has-project-role="owner">
+				<div class="panel-heading">
+					<button class="btn btn-default btn-xxs pull-right" style="margin-top: -1px" ng-click="showStructure=!showStructure">
+						<i class="fa fa-angle-double-down" ng-if="!showStructure"></i>
+						<i class="fa fa-angle-double-up" ng-if="showStructure"></i>
+					</button>
+					<h4 class="panel-title" translate="project.structure"></h4>
+				</div>
+
+				<div class="panel-collapse" ng-show="showStructure">
+					<div class="list-group">
+						<a ui-sref="main.project.structure.basics"
+						   ui-sref-active="active"
+						   class="list-group-item">
+
+							<i class="fa fa-info-circle fa-fw"></i>
+							<span translate="project.basics"></span>
+						</a>
+
+						<a ui-sref="main.project.structure.collection_site_list"
+						   ui-sref-active="active"
+						   class="list-group-item"
+						   eat-click-if="!project._rev"
+						   disable-if="!project._rev">
+
+							<span class="label label-default pull-right">{{master.entities.length}}</span>
+							<i class="fa fa-map-marker fa-fw"></i>
+							<span translate="project.collection_site_list"></span>
+						</a>
+
+						<a ui-sref="main.project.structure.user_list"
+						   ui-sref-active="active"
+						   class="list-group-item"
+						   eat-click-if="!project._rev" disable-if="!project._rev">
+
+						   <span class="label label-default pull-right">{{master.users.length}}</span>
+							<i class="fa fa-user fa-fw"></i>
+							<span translate="project.users"></span>
+						</a>
+
+						<a ui-sref="main.project.structure.collection_form_list"
+						   class="list-group-item"
+						   ng-class="{active: $state.is('main.project.structure.collection_form_list') || $state.is('main.project.structure.collection_form_edition')}"
+						   eat-click-if="!project._rev"
+						   disable-if="!project._rev">
+							
+							<span class="label label-default pull-right">{{master.forms.length}}</span>
+							<i class="fa fa-sign-in fa-fw"></i>
+							<span translate="project.collection_form_list"></span>
+						</a>
+
+						<a ui-sref="main.project.structure.logical_frame_list"
+						   ng-class="{active: $state.is('main.project.structure.logical_frame_list') || $state.is('main.project.structure.logical_frame_edition')}"
+						   class="list-group-item"
+						   eat-click-if="!project._rev" disable-if="!project._rev">
+
+							<span class="label label-default pull-right">{{master.logicalFrames.length}}</span>
+							<i class="fa fa-sign-out fa-fw"></i>
+							<span translate="shared.logical_frames"></span>
+						</a>
+
+						<a ui-sref="main.project.structure.cross_cutting"
+						   ui-sref-active="active"
+						   class="list-group-item"
+						   eat-click-if="!project._rev" disable-if="!project._rev">
+
+							<span class="label label-default pull-right">{{master.crossCutting|length}}</span>
+							<i class="fa fa-sign-out fa-fw"></i>
+							<span translate="indicator.cross_cutting"></span>
+						</a>
+					</div>
+				</div>
+			</div>
+
 			<div class="panel panel-default" ng-if="userCtx.type == 'user'">
 				<div class="panel-collapse">
 					<div class="list-group">
-						<a class="list-group-item list-group-item-info" ng-click="cloneProject()" eat-click-if="!project._rev" disable-if="!project._rev" acl-has-role="project">
+						<a class="list-group-item list-group-item-info" ng-click="cloneProject()" eat-click-if="!project._rev" disable-if="!project._rev" acl-has-project-creation>
 							<i class="fa fa-clone fa-fw"></i>
 							<span translate="shared.clone"></span>
 						</a>
 
-						<a class="list-group-item list-group-item-info" disable-if="1" acl-lacks-role="project" tooltip="{{'project.cant_create'|translate}}">
+						<a class="list-group-item list-group-item-info" disable-if="1" acl-lacks-project-creation>
 							<i class="fa fa-clone fa-fw"></i>
 							<span translate="shared.clone"></span>
 						</a>						
