--- a/client/dev/partials/projects/structure/edition-modal-short.html
+++ b/client/dev/partials/projects/structure/edition-modal-short.html
@@ -4,7 +4,7 @@
 
 		<div class="form-group">
 			<label for="formula-input" class="col-sm-2 control-label" translate="project.formula"></label>
-			<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.formula">
+			<div class="col-sm-10">
 				<input expression id="colorize-input" class="form-control" ng-model="planning.formula" />
 			</div>
 		</div>
@@ -48,12 +48,12 @@
 </div>
 
 <div class="modal-footer">
-	<button ng-click="save()" ng-disabled="planningForm.$invalid" class="btn btn-primary" acl-has-project-role="owner">
+	<button ng-click="save()" ng-disabled="planningForm.$invalid" class="btn btn-primary">
 		<i class="fa fa-object-group"></i>
 		<span translate="project.update_logframe"></span>
 	</button>
 
-	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew" acl-has-project-role="owner">
+	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew">
 		<i class="fa fa-remove"></i>
 		<span translate="shared.delete"></span>
 	</button>
