--- a/client/dev/partials/projects/structure/menu.html
+++ b/client/dev/partials/projects/structure/menu.html
@@ -1,7 +1,7 @@
 <div>
 	<div ui-view></div>
 
-	<div acl-has-project-role="owner" class="noprint" style="margin-bottom: 20px">
+	<div class="noprint" style="margin-bottom: 20px">
 		<a ng-disabled="!projectSavable || projectSaveRunning" class="btn btn-primary" ng-click="save()">
 			<i class="fa fa-floppy-o" ng-if="!projectSaveRunning"></i>
 			<i class="fa fa-circle-o-notch fa-spin" ng-if="projectSaveRunning"></i>
