--- a/client/dev/partials/projects/structure/user-modal.html
+++ b/client/dev/partials/projects/structure/user-modal.html
@@ -85,12 +85,12 @@
 </div>
 
 <div class="modal-footer">
-	<button ng-click="done()" ng-disabled="userForm.$invalid" class="btn btn-primary" acl-has-project-role="owner">
+	<button ng-click="done()" ng-disabled="userForm.$invalid" class="btn btn-primary">
 		<i class="fa fa-object-group"></i>
 		<span translate="project.update_user"></span>
 	</button>
 
-	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew" acl-has-project-role="owner">
+	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew">
 		<i class="fa fa-remove"></i>
 		<span translate="shared.delete"></span>
 	</button>
